# Forcasting-Techniques

./: README.md
FTProject01/data/results/: Forcast-ARMA(4,9).csv
FTProject01/src/: Practical_Work_01_ARMA_Done.ipynb
FTProject02/: LICENSE  Makefile  README.md  environment.yml  pyproject.toml  sd.txt
FTProject02/Forcasting-Techniques/: Makefile  README.md  environment.yml  pyproject.toml
FTProject02/Forcasting-Techniques/docs/docs/: index.md
FTProject02/docs/: mkdocs.yml
FTProject02/docs/docs/: index.md
FTProject02/src/: __init__.py  init_config.yaml
FTProject02/src/data/: dataset_config.yaml  make_dataset.py  make_dataset_config.YAML  process_sample.py
FTProject02/src/features/: __init__.py  build_feature_config.YAML  build_features.py  feature_config.yaml
FTProject02/src/models/: create_model.py  model_config.yaml  train_model.py
Part-01/data/initial-data/: data.csv
Part-01/data/results/: model_evaluations.txt
Part-01/src/: Practical_Work_01_MLP_Done.ipynb
data/initial-data/: 12-PW1a.xlsx
data/results/: Forcast-ARMA(7,7).csv  Forcast-ARMA(8,2).csv  Forcast-MLP.csv
report/Forcasting-Project/: main.tex  sample.bib
